# docker-registry-manager

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yml
assets/: main.css
src/: lib.rs  main.rs
src/api/: client.rs  error.rs  mod.rs
src/auth/: challenge.rs  handler.rs  mod.rs
src/components/: app.rs  delete_dialog.rs  encryption_prompt.rs  error_display.rs  manifest_view.rs  mod.rs  registry_form.rs  registry_list.rs  repository_list.rs  settings.rs  tag_list.rs  toolbar.rs
src/models/: cache.rs  error.rs  manifest.rs  mod.rs  registry.rs
src/state/: app_state.rs  mod.rs
src/storage/: adapter.rs  desktop.rs  encryption.rs  mod.rs  service.rs  web.rs
src/utils/: curl.rs  export.rs  filter.rs  history.rs  mod.rs  size.rs  sort.rs
