[package]
name = "docker-registry-manager"
version = "0.1.0"
authors = ["Xuan Fu <fuxuan928@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
aes-gcm = "0.10"
rand = "0.9"
sha2 = "0.10"

# HTTP client - platform specific
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.48", features = ["full"] }
directories = "6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
gloo-storage = "0.3"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[dev-dependencies]
proptest = "1.9"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
